updated gallery responsiveness

--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -17,10 +17,12 @@
             <a href="index.html"><img src="Images/Graphics/S22 New Logo FINAL-white.png" alt="logo"/></a>
             <h2>Premiere</h2>
           </div>
-          <div class"title">
-            <p class="h1">STAY IN WITH </p>
-            <h1> STUDIO</h1>
-            <p class="h22">22</p>
+          <div class"heading">
+            <p class="h0">STAY IN WITH </p>
+            <div class="h1">
+              <h1> STUDIO</h1>
+              <p class="h22">22</p>
+            </div>
           </div>
         </div>
         <nav>
