updating premiere website

--- a/Premiere/playland.html
+++ b/Premiere/playland.html
@@ -215,13 +215,60 @@
       </main>
         <!-- end preview panel -->
       <section class="film">
+      </section>
+
+      <script>
+      // Set the date we're counting down to
+      var countDownDate = new Date("July 1, 2020 17:00:00").getTime();
+      // Update the count down every 1 second
+      var x = setInterval(function() {
+      // Get today's date and time
+      var now = new Date().getTime();
+      // Find the distance between now and the count down date
+      var distance = countDownDate - now;
+      // Time calculations for days, hours, minutes and seconds
+      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      const template =`
         <div class="presents">
           <img src="Images/Graphics/S22 New Logo FINAL-white.png" alt="logo"/>
           <p>presents...</p>
         </div>
         <p id="title">Playland</p>
-        <div style="padding:52.73% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/398408696?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-      </section>
+        <div class="countdown">
+          <div class="count">
+            <p class="number">${minutes}</p>
+            <p class="unit">MINUTES</p>
+          </div>
+          <div class="count">
+            <p class="number">${seconds}</p>
+            <p class="unit">SECONDS</p>
+          </div>
+        </div>`;
+
+      const unlocked =`
+      <div class="presents">
+        <img src="Images/Graphics/S22 New Logo FINAL-white.png" alt="logo"/>
+        <p>presents...</p>
+      </div>
+      <p id="title">Playland</p>
+      <div style="padding:52.73% 0 0 0;position:relative;">
+        <iframe src="https://player.vimeo.com/video/398408696?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+      <div class="nextFilm"><a href= >Next Film</a></div>
+      `;
+
+      document.querySelector(".film").innerHTML = template;
+        if (distance < 0) {
+          clearInterval(x);
+          document.querySelector(".film").innerHTML = unlocked;
+        }
+      }, 1000);
+    </script>
+
     </body>
 
     <footer class="foot">
@@ -237,4 +284,5 @@
     </footer>
 
     <script type="text/javascript" src="JS/carousel.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </html>
